--- a/DiaGen/examples/CCSDT.1.dgr.orso.tex
+++ b/DiaGen/examples/CCSDT.1.dgr.orso.tex
@@ -22,7 +22,7 @@
 %#CCSDT: Energy
 \begin{equation} \;\;\;\;\;\;  3: Z+=H^{l_{1}}_{d_{1}}S^{d_{1}}_{l_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  9: Z+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{d_{1}d_{2}}_{l_{1}l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  20: Z+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{d_{2}}_{l_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  29: Z+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{d_{2}}_{l_{2}}\cdot 1/2 \end{equation}
 \begin{equation} \;\;\;\;\;\;  1: Z^{e_{1}}_{m_{1}}+=H^{e_{1}}_{m_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  4: Z^{e_{1}}_{m_{1}}+=H^{e_{1}}_{d_{1}}S^{d_{1}}_{m_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  5: Z^{e_{1}}_{m_{1}}+=H^{l_{1}}_{m_{1}}S^{e_{1}}_{l_{1}}\cdot -1/1 \end{equation}
@@ -30,13 +30,14 @@
 \begin{equation} \;\;\;\;\;\;  10: Z^{e_{1}}_{m_{1}}+=H^{l_{1}}_{d_{1}}S^{e_{1},d_{1}}_{m_{1},l_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  11: Z^{e_{1}}_{m_{1}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{d_{1}d_{2}}_{m_{1},l_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  12: Z^{e_{1}}_{m_{1}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{e_{1},d_{1}}_{l_{1}l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  21: Z^{e_{1}}_{m_{1}}+=H^{l_{1}}_{d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  22: Z^{e_{1}}_{m_{1}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{1}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  23: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  27: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}d_{2}}_{m_{1},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  28: Z^{e_{1}}_{m_{1}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1},d_{2}}_{l_{1}l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  29: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{1},d_{2}}_{m_{1},l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  51: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  20: Z^{e_{1}}_{m_{1}}+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{e_{1},d_{1}d_{2}}_{m_{1},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  30: Z^{e_{1}}_{m_{1}}+=H^{l_{1}}_{d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  31: Z^{e_{1}}_{m_{1}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  32: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  36: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}d_{2}}_{m_{1},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  37: Z^{e_{1}}_{m_{1}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1},d_{2}}_{l_{1}l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  38: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{1},d_{2}}_{m_{1},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  78: Z^{e_{1}}_{m_{1}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{2}}\cdot -1/1 \end{equation}
 \begin{equation} \;\;\;\;\;\;  2: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1}e_{2}}_{m_{1}m_{2}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  7: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1}e_{2}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  8: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{m_{1}m_{2}}S^{e_{2}}_{l_{1}}\cdot -1/1 \end{equation}
@@ -45,49 +46,80 @@
 \begin{equation} \;\;\;\;\;\;  15: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1}e_{2}}_{d_{1}d_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  16: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2},d_{1}}_{m_{2},l_{1}} \end{equation}
 \begin{equation} \;\;\;\;\;\;  17: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{m_{1}m_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  24: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1}e_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  25: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  26: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1}m_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  30: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}}_{d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{1}m_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  31: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}}_{d_{1}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  32: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}d_{2}}_{m_{1}m_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  33: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{2},d_{2}}_{m_{2},l_{1}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  34: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{2},d_{2}}_{m_{1}m_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  35: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  36: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  37: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  42: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{m_{1},l_{1}}S^{d_{1}d_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  43: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  44: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1}m_{2}}S^{e_{2},d_{2}}_{l_{1}l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  45: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1},l_{1}}S^{e_{2},d_{2}}_{m_{2},l_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  52: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot -1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  53: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  54: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  55: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{e_{2},d_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  56: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{l_{2}}S^{e_{2},d_{2}}_{m_{1}m_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  57: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  58: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{1}}S^{e_{1}e_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  68: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot 1/4 \end{equation}
+\begin{equation} \;\;\;\;\;\;  21: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}}_{d_{1}}S^{e_{1}e_{2},d_{1}}_{m_{1}m_{2},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  22: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2},d_{1}d_{2}}_{m_{1}m_{2},l_{1}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  23: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{e_{1}e_{2},d_{1}}_{m_{2},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  33: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1}e_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  34: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  35: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1}m_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  39: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}}_{d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{1}m_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  40: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}}_{d_{1}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  41: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}d_{2}}_{m_{1}m_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  42: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{2},d_{2}}_{m_{2},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  43: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{2},d_{2}}_{m_{1}m_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  44: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  45: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  46: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  51: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}d_{2}}_{m_{1}m_{2},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  52: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2},d_{2}}_{m_{2},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  53: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2},d_{2}}_{m_{1}m_{2},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  62: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{m_{1},l_{1}}S^{d_{1}d_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  63: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  64: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1}m_{2}}S^{e_{2},d_{2}}_{l_{1}l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  65: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1},l_{1}}S^{e_{2},d_{2}}_{m_{2},l_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  79: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot -1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  80: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  81: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  82: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{e_{2},d_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  83: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{l_{2}}S^{e_{2},d_{2}}_{m_{1}m_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  84: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  85: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{1}}S^{e_{1}e_{2}}_{m_{2},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  100: Z^{e_{1}e_{2}}_{m_{1}m_{2}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}\cdot 1/4 \end{equation}
 \begin{equation} \;\;\;\;\;\;  18: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1}e_{2}}_{m_{1},d_{1}}S^{e_{3},d_{1}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
 \begin{equation} \;\;\;\;\;\;  19: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1}m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{1}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  38: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1}e_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  39: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2}}_{l_{1}}S^{e_{3},d_{1}}_{m_{2}m_{3}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  40: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{1}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  41: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1}m_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  46: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}}_{d_{1}}S^{e_{1}e_{2}}_{m_{1},l_{1}}S^{e_{3},d_{1}}_{m_{2}m_{3}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  47: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2}e_{3}}_{m_{1},l_{1}}S^{d_{1}d_{2}}_{m_{2}m_{3}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  48: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2},d_{1}}_{m_{1}m_{2}}S^{e_{3},d_{2}}_{m_{3},l_{1}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  49: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}}S^{e_{3},d_{1}}_{m_{3},l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  50: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{e_{3},d_{1}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  59: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  60: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{1}}\cdot 1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  61: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{e_{3},d_{1}}_{m_{2}m_{3}}\cdot -1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  62: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  63: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3}}_{m_{1},l_{2}}S^{d_{1}d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  64: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{1}m_{2}}S^{e_{3},d_{2}}_{m_{3},l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  65: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}}S^{e_{3},d_{2}}_{m_{3},l_{2}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  66: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
-\begin{equation} \;\;\;\;\;\;  67: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2}}_{m_{1},l_{2}}S^{e_{3},d_{2}}_{m_{2}m_{3}} \end{equation}
-\begin{equation} \;\;\;\;\;\;  69: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/2 \end{equation}
-\begin{equation} \;\;\;\;\;\;  70: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  24: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1}}_{d_{1}}S^{e_{2}e_{3},d_{1}}_{m_{1}m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  25: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}}_{m_{1}}S^{e_{1}e_{2}e_{3}}_{m_{2}m_{3},l_{1}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  26: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1}e_{2}}_{d_{1}d_{2}}S^{e_{3},d_{1}d_{2}}_{m_{1}m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  27: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2}e_{3},d_{1}}_{m_{2}m_{3},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  28: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{m_{1}m_{2}}S^{e_{1}e_{2}e_{3}}_{m_{3},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  47: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1}e_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  48: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{e_{2}}_{l_{1}}S^{e_{3},d_{1}}_{m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  49: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  50: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1}m_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  54: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}}_{d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3},d_{1}}_{m_{1}m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  55: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}}_{d_{1}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}e_{3}}_{m_{2}m_{3},l_{1}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  56: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2}}_{l_{1}}S^{e_{3},d_{1}d_{2}}_{m_{1}m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  57: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{2}e_{3},d_{2}}_{m_{2}m_{3},l_{1}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  58: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{2}e_{3},d_{2}}_{m_{1}m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  59: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3},d_{1}}_{m_{2}m_{3},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  60: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{m_{2}}S^{e_{1}e_{2}e_{3}}_{m_{3},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  61: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2}e_{3}}_{m_{2}m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  66: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}}_{d_{1}}S^{e_{1}e_{2}}_{m_{1},l_{1}}S^{e_{3},d_{1}}_{m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  67: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1}d_{2}}S^{e_{2}e_{3}}_{m_{1},l_{1}}S^{d_{1}d_{2}}_{m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  68: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2},d_{1}}_{m_{1}m_{2}}S^{e_{3},d_{2}}_{m_{3},l_{1}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  69: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}}S^{e_{3},d_{1}}_{m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  70: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{m_{1},d_{1}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{e_{3},d_{1}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  71: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{m_{1},l_{1}}S^{e_{3},d_{1}d_{2}}_{m_{2}m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  72: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{e_{3},d_{1}d_{2}}_{m_{1}m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  73: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1}m_{2}}S^{e_{2}e_{3},d_{2}}_{m_{3},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  74: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{m_{1},l_{1}}S^{e_{2}e_{3},d_{2}}_{m_{2}m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  75: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{e_{1},d_{1}}_{l_{1}l_{2}}S^{e_{2}e_{3},d_{2}}_{m_{1}m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  76: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1}d_{2}}S^{d_{1}d_{2}}_{m_{1}m_{2}}S^{e_{1}e_{2}e_{3}}_{m_{3},l_{1}l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  77: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{d_{1}d_{2}}_{m_{1},l_{1}}S^{e_{1}e_{2}e_{3}}_{m_{2}m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  86: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{e_{2}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  87: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{e_{1},l_{1}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{1}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  88: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{e_{3},d_{1}}_{m_{2}m_{3}}\cdot -1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  89: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{m_{1},d_{1}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  90: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{e_{3},d_{1}d_{2}}_{m_{1}m_{2}m_{3}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  91: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{e_{2}e_{3},d_{2}}_{m_{2}m_{3},l_{2}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  92: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{l_{2}}S^{e_{2}e_{3},d_{2}}_{m_{1}m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  93: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{1}e_{2}e_{3}}_{m_{3},l_{1}l_{2}}\cdot 1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  94: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{l_{1}}S^{e_{1}e_{2}e_{3}}_{m_{2}m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  95: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1}d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}e_{3}}_{m_{1},l_{2}}S^{d_{1}d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  96: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2},d_{1}}_{m_{1}m_{2}}S^{e_{3},d_{2}}_{m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  97: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{m_{2},l_{1}}S^{e_{3},d_{2}}_{m_{3},l_{2}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  98: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1}l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{m_{1}}S^{e_{1}e_{2}}_{l_{1}l_{2}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/1 \end{equation}
+\begin{equation} \;\;\;\;\;\;  99: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{d_{1}}_{l_{1}}S^{e_{1}e_{2}}_{m_{1},l_{2}}S^{e_{3},d_{2}}_{m_{2}m_{3}} \end{equation}
+\begin{equation} \;\;\;\;\;\;  101: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{e_{2}}_{l_{2}}S^{d_{1}}_{m_{1}}S^{e_{3},d_{2}}_{m_{2}m_{3}}\cdot -1/2 \end{equation}
+\begin{equation} \;\;\;\;\;\;  102: Z^{e_{1}e_{2}e_{3}}_{m_{1}m_{2}m_{3}}+=H^{l_{1},l_{2}}_{d_{1},d_{2}}S^{e_{1}}_{l_{1}}S^{d_{1}}_{m_{1}}S^{d_{2}}_{m_{2}}S^{e_{2}e_{3}}_{m_{3},l_{2}}\cdot -1/2 \end{equation}
 \end{document}
